--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 html {
-    background-color: #eee5de; /*pink*/
+    /*background-color: #eee5de;*/ /*pink*/
     /*background-color: #FFFFFF;*/ /*white*/
+    background-color: #FAF0E6;
 }
