--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 html {
-    /*background-color: #eee5de;*/ /*pink*/
+    background-color: #eee5de; /*pink*/
     /*background-color: #FFFFFF;*/ /*white*/
-    background-color: #FAF0E6;
+    /*background-color: #FAF0E6;*/
 }
