--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
 html {
-    background-color: #eee5de; /*pink*/
-    /*background-color: #fdf5e6;*/ /*white*/
+    /*background-color: #eee5de;*/ /*pink*/
+    background-color: #FEF9EF; /*white*/
 }
